# ZipStudio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ZipStudio_vc2015.sln  build_cmds.txt
bench/: CMakeLists.txt
bench/ZipStudio_bench/: ZipStudio_bench.cpp
client/: CMakeLists.txt
client/ZipStudio/: ZipStudio-Client.cpp  ZipStudio.cpp  dmc_test.h
projects/vc2015/ZipLab/: ZipLab.vcxproj  ZipLab.vcxproj.filters
projects/vc2015/ZipStd/: ZipStd.vcxproj  ZipStd.vcxproj.filters
projects/vc2015/ZipStudio/: ZipStudio.vcxproj  ZipStudio.vcxproj.filters
src/: CMakeLists.txt
src/ziplab/: version.h  version.h.in
src/ziplab/arch/: x86_intrin.h
src/ziplab/basic/: compiler.h  export.h  macros.h  platform.h  stddef.h  vld.h
src/ziplab/config/: config.h  config_cxx.h  config_hw.h  config_hw_use.h  config_post.h  config_pre.h  config_ziplab.h
src/ziplab/huffman/: huffman.cpp  huffman.hpp
src/ziplab/jstd/: bitset.hpp
src/ziplab/jstd/bits/: Bits.hpp  Power2.hpp  bits.hpp  power2.hpp
src/ziplab/lz77/: lz77.hpp  lzDictHashmap.hpp  lzss.hpp
src/ziplab/rans/: rANS.h  rANSDecoder.h  rANSEncoder.h
src/ziplab/std/: bitset.h
src/ziplab/stream/: FileReader.h  FileWriter.h  IOStreamRoot.h  InputFile.h  InputStream.h  MemoryBuffer.h  MemoryStorage.h  MemoryView.h  OutputFile.h  OutputStream.h  ReverseInputStream.h  ReverseOutputStream.h  SequentialInputStream.h  SequentialOutputStream.h  StreamBuffer.h
src/zipstd/huffman/: huffman.cpp  huffman.hpp
test/: CMakeLists.txt
test/ZipLab_test/: ZipLab_test.cpp
